--- a/Tracking Buses SE/Tracking Buses SE/Base.lproj/LaunchScreen.storyboard
+++ b/Tracking Buses SE/Tracking Buses SE/Base.lproj/LaunchScreen.storyboard
@@ -25,14 +25,14 @@
                                     <constraint firstAttribute="width" constant="278" id="TER-hr-2Cw"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="szt-V8-kg0">
-                                <rect key="frame" x="12.5" y="377" width="350" height="270"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="szt-V8-kg0">
+                                <rect key="frame" x="13" y="427" width="350" height="223"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="270" id="Ov9-wb-MTm"/>
                                     <constraint firstAttribute="width" constant="350" id="m54-ej-HiX"/>
                                 </constraints>
                                 <attributedString key="attributedText">
-                                    <fragment content="Justin Bakker, Inc.">
+                                    <fragment content="Yung Botch, Inc.">
                                         <attributes>
                                             <color key="NSColor" red="0.99527573700000005" green="1" blue="0.1348903431" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <font key="NSFont" size="40" name=".SFNSDisplay"/>
